# coral-ai

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/analyzers/: authenticity.rs  developer.rs  market.rs  mod.rs  wallet.rs
src/core/: agent.rs  types.rs
src/notifiers/: mod.rs  telegram.rs  twitter.rs
src/traders/: executor.rs  jupiter.rs  mod.rs
src/utils/: logger.rs  metrics.rs  mod.rs  solana.rs
tests/: integration_tests.rs
