[package]
name = "solana-trading-agent"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Solana trading agent for analyzing and trading tokens"
license = "MIT"

[dependencies]
solana-sdk = "1.17"
solana-client = "1.17"
anchor-client = "0.28"
jupiter-core = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mock-it = "0.3"
