[package]
name = "coral"
version = "0.1.0"
edition = "2021"
authors = ["coralaiagent <coralai@gmail.com>"]
description = "An intelligent Solana trading agent for market analysis and automated trading"
license = "MIT"
repository = "https://github.com/coralaiagent/coral"

[dependencies]
solana-sdk = "1.17"
solana-client = "1.17"
anchor-client = "0.28"
jupiter-core = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
bs58 = "0.4"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mock-it = "0.3"
